Code clean up, added additional logging, configured properties for web-chart-01 instead of local

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,4 @@
-file.base.dir=C:/bin/bluelock
+server.port=8082
+
+file.base.dir=/var/local/bluelock
 file.num.nested.dir=3
-hostname=localhost
-port=8080
-url=bluelock
