--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     </parent>
 
     <properties>
-        <start-class>org.murygin.archive.Application</start-class>
+        <start-class>com.bluelock.filesystem.Application</start-class>
      </properties>
 
     <build>
